--- a/notebooks/Data cleaning 2.ipynb
+++ b/notebooks/Data cleaning 2.ipynb
@@ -841,7 +841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listings_ams=listings_ams.to_csv('../data/cleaned/listings_ams3.csv')"
+    "#listings_ams=listings_ams.to_csv('../data/cleaned/listings_ams3.csv')"
    ]
   },
   {
